2005-12-14  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for final X11R7 release candidate.

2005-12-03  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for X11R7 RC3 release.

2005-11-19  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* xcomposite.pc.in:
	Update pkgconfig files to separate library build-time dependencies
	from application build-time dependencies.
	* configure.ac:
	Update dependencies to work with separate build roots.

2005-11-09  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for X11R7 RC2 release.

2005-11-01  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update pkgcheck dependencies to work with separate build roots.

2005-10-18  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for RC1 release.

2005-07-15  Alexander Gottwald  <ago at freedesktop dot org>

	* src/Makefile.am:
	Add DEP_LIBS

2005-07-11  Keith Packard  <keithp@keithp.com>

	* src/.cvsignore:
	* src/Makefile.am:
	Add missing files

2005-07-11  Keith Packard  <keithp@keithp.com>

	* configure.ac:
	* xcomposite.pc.in:
	Require modular X library.
	Unify dependency _CFLAGS/_LIBS

2004-11-22  Carl Worth  <cworth@cworth.org>

	* configure.ac: Remove AC_CONFIG_AUX_DIR (it was in the wrong
	place for automake-1.9, and it was set to the default value
	anyway).

2004-07-08  Keith Packard  <keithp@keithp.com>

	* Makefile.am:
	* Xcomposite.c: (XCompositeVersion), (XCompositeNameWindowPixmap):
	* Xcomposite.h:
	* configure.ac:
	Add library API for Composite 0.2 changes
	Add XCompositeVersion to get the run-time library version number
	Fix package version number in configure.ac and Xcomposite.h

2004-02-03  Jim Gettys <jg@handhelds.org>

	* AUTHORS: Add authors to AUTHORS file

2004-01-15  Daniel Stone  <daniel@fooishbar.org>